--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1,7 +1,7 @@
 version: 2
 
 sources:
-    - name: jaffle_shop
+    - name: jaffle_shop1
       description: This is a replica of the Postgres database used by our app
       database: raw
       schema: jaffle_shop
