making an error so deleted the source.yml file to see what happing

--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -6,4 +6,14 @@ sources:
     schema: jaffle_shop
     tables:
       - name: customers
+        freshness: null
+        
       - name: orders
+        freshness: 
+          error_after:
+            count: 6
+            period: hour
+          warn_after:
+            count: 3
+            period: day
+        
