test on stg_orders table

--- a/models/staging/jaffle_shop/stg_customers.yml
+++ b/models/staging/jaffle_shop/stg_customers.yml
@@ -6,5 +6,16 @@ models:
         tests:
           - unique
           - not_null
+  - name: stg_orders
+    columns:
+      - name: order_id
+        tests:
+          - unique
+          - not_null
+      - name: status
+        tests:
+          - accepted_values:
+              values: ['shipped','returned','completed','return_pending','placed']
+          
 
 
