--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,7 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+    First_exercise:
+      materialized: table
+    staging:
+      materialized: table
