--- a/models/ANew_Staging_For_Practice/stg_new_customers.yml
+++ b/models/ANew_Staging_For_Practice/stg_new_customers.yml
@@ -8,3 +8,6 @@ sources:
       - name: raw_customers
       - name: raw_items
       - name: raw_orders
+      - name: raw_products
+      - name: raw_stores
+      - name: raw_suppliers
