created raw data and added on staging folder

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,5 +38,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
+    staging:
       +materialized: table
+
+seeds:
+  my_new_project:                # this must match the project name
+    +schema: public     # target schema for seeds
+    +database: practice   # optional: target database for seeds
+
