--- a/models/Transformation/trans_appointment.yml
+++ b/models/Transformation/trans_appointment.yml
@@ -1,42 +1,41 @@
 version: 2
 models:
-  - name: trans_appointments
-    description: appointment table transmission and the format test are made.
+  - name: trans_appointment
+    description: "appointment table transmission and the format test are made."
     columns:
-      - name: appointment_id
-        description: primary key for this table.
+      - name: appointment_key
+        description: "primary key for this table."
         tests:
           - unique
           - not_null
-      - name: patient_id
-        description: patient identifier and it act as an foreign key so it has an duplicate values.
+          
+      - name: patient_key
+        description: "patient identifier and it act as an foreign key so it has an duplicate values."
         tests:
           - not_null
           - relationships:
               field: patient_id
               to: ref('stg_raw_patients')
-      - name: doctor_id
-        description: doctor identifier and it has an duplicate values.
+
+      - name: doctor_key
+        description: "doctor identifier and it has an duplicate values."
         tests:
           - not_null
           - relationships:
               field: doctor_id
               to: ref('stg_raw_doctors')
+
       - name: appointment_date
         description: "Date of the appointment."
         tests:
           - not_null
-          - dbt_utils.expression_is_true: 
-              expression: "TRY_CAST(appointment_date AS DATE) IS NOT NULL"
-          - dbt_utils.expression_is_true: 
-              expression: "appointment_date >= '2023-01-01' AND appointment_date <= '2024-12-31'" 
+          - dbt_utils.expression_is_true:
+              expression: " between '2023-01-01' AND '2024-12-31'"
 
       - name: appointment_time
         description: "Time of the appointment."
         tests:
           - not_null
-          - dbt_utils.expression_is_true:
-              expression: "TRY_CAST(appointment_time AS TIME) IS NOT NULL"
 
       - name: reason_for_visit
         description: "Reason for the patient's visit."
