--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:  # replace with your actual project name
+  my_new_project: 
+    staging:
+      schema: staging
     pre-hook: 
       - "{{ ctrl_log_model() }}"
     post-hook:
