changed model name from dim_doctors to dim_doctor in yaml

--- a/models/marts/all_file_test.yml
+++ b/models/marts/all_file_test.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: dim_doctors
+  - name: dim_doctor
     description: |
       This dimension table contains doctor details including their specialization, contact information, years of experience, and hospital branch.
     columns:
