--- a/models/marts/all_file_test.yml
+++ b/models/marts/all_file_test.yml
@@ -166,7 +166,7 @@ models:
         tests:
           - not_null
           - accepted_values:
-              values: ['Completed', 'No-show', 'Cancelled']
+              values: ['Completed', 'No-show', 'Cancelled','Scheduled']
 
   - name: fact_billing
     description: |
